# haskell-tree-sitter

./: .gitmodules  haskell-tree-sitter.cabal  stack.yaml
script/: update-tree-sitter
src/Text/Parser/TreeSitter/: Document.hs  Language.hs  Node.hs
