name:                haskell-tree-sitter
version:             0.2.1
synopsis:            haskell tree-sitter bindings
description:         Please see README.md
homepage:            http://github.com/tree-sitter/haskell-tree-sitter#readme
license:             BSD3
license-file:        LICENSE
author:              Rob Rix, Josh Vera, Tim Clem, Rick Winfrey, Max Brunsfeld, Ayman Nadeem, Patrick Thomson
maintainer:          rob.rix@github.com
copyright:           2015 GitHub
category:            Web
build-type:          Custom
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , directory >= 1.3.0.2 && < 1.4
                     , filepath >= 1.4.1.2 && < 1.5
                     , split >= 0.2.3.2 && < 0.3
                     , template-haskell >= 2.12.0.0 && < 2.14.0.0
  default-language:    Haskell2010
  exposed-modules:     TreeSitter.Parser
                     , TreeSitter.Language
                     , TreeSitter.Node
                     , TreeSitter.Tree
                     , TreeSitter.Go
                     , TreeSitter.Haskell
                     , TreeSitter.Java
                     , TreeSitter.JSON
                     , TreeSitter.PHP
                     , TreeSitter.Python
                     , TreeSitter.Ruby
                     , TreeSitter.TypeScript
  c-sources:           src/bridge.c

                     -- Core tree-sitter runtime
                     , vendor/tree-sitter/externals/utf8proc/utf8proc.c
                     , vendor/tree-sitter/src/runtime/get_changed_ranges.c
                     , vendor/tree-sitter/src/runtime/language.c
                     , vendor/tree-sitter/src/runtime/lexer.c
                     , vendor/tree-sitter/src/runtime/node.c
                     , vendor/tree-sitter/src/runtime/parser.c
                     , vendor/tree-sitter/src/runtime/stack.c
                     , vendor/tree-sitter/src/runtime/subtree.c
                     , vendor/tree-sitter/src/runtime/tree.c
                     , vendor/tree-sitter/src/runtime/tree_cursor.c
                     , vendor/tree-sitter/src/runtime/utf16.c

                     -- Language parsers
                     , vendor/tree-sitter-go/src/parser.c
                     , vendor/tree-sitter-haskell/src/parser.c
                     , vendor/tree-sitter-haskell/src/scanner.cc
                     , vendor/tree-sitter-ruby/src/parser.c
                     , vendor/tree-sitter-ruby/src/scanner.cc
                     , vendor/tree-sitter-typescript/src/parser.c
                     , vendor/tree-sitter-typescript/src/scanner.c
                     , vendor/tree-sitter-python/src/parser.c
                     , vendor/tree-sitter-python/src/scanner.cc
                     , vendor/tree-sitter-java/src/parser.c
                     , vendor/tree-sitter-php/src/parser.c
                     , vendor/tree-sitter-php/src/scanner.cc
                     , vendor/tree-sitter-json/src/parser.c
  cc-options:          -Wall
  ghc-options:         -Wall -fno-warn-name-shadowing -O -j
  extra-libraries:     stdc++

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-tree-sitter
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter

custom-setup
  setup-depends:  base >= 4.8 && < 5
                , Cabal
                , directory
                , process
